Fix anycont on small screens

--- a/css/original.css
+++ b/css/original.css
@@ -397,5 +397,5 @@ section.about p {
 .sponsors .anycont img {
   float:none;
   text-align: center;
-  padding: 6vh;
+  padding: 3vw;
 }
